Additional codesmell fixes